[project]
name = "toolchest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "sounddevice>=0.5.2",
]

[dependency-groups]
dev = [
    "numpy>=2.3.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
]
