[project]
name = "toolchest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "sounddevice==0.5",
    "soundfile>=0.12.0",
    "mlx>=0.15.0",
    "moshi-mlx>=0.0.2",
    "sentencepiece>=0.2.0",
    "ollama>=0.3.0",
]

[dependency-groups]
dev = [
    "numpy>=2.1.0,<2.3",
    "pytest>=8.4.1",
    "pytest-cov>=6.0.0",
]
